# python-baseclient

./: README.rst  requirements.txt  setup.cfg
baseclient/: shell.py  test2_shell.py
baseclient/v1/: test2_shell.py  test_shell.py
