[metadata]
name = python-baseclient
summary = Python client library for Base API
author = Toshimitsu Tsuji
author-email = tsujimitsu@gmail.com
home-page = http://codelogue.com

[files]
packages =
    baseclient

[entry_points]
console_scripts =
    base = baseclient.shell:main

baseclient.v1 =
    test_list = baseclient.v1.test_shell:TestList
    test_show = baseclient.v1.test_shell:TestShow
    test_cmd  = baseclient.v1.test_shell:TestCmd
    test2_cmd = baseclient.v1.test2_shell:Test2Cmd
